# docs/swagger.json
@@ -746,6 +746,12 @@
                         "type": "string"
                     }
                 },
+                "query_fields": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/httptransport.ExportQueryFieldBody"
+                    }
+                },
                 "supports_snapshot": {
                     "type": "boolean"
                 },
@@ -934,6 +940,35 @@
                 },
                 "total": {
                     "type": "integer"
+                }
+            }
+        },
+        "httptransport.ExportQueryFieldBody": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "format": {
+                    "type": "string"
+                },
+                "key": {
+                    "type": "string"
+                },
+                "options": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "required": {
+                    "type": "boolean"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
                 }
             }
         },
